[3.1] Crash when entering edit mode #95997

Closed
opened 2022-02-23 18:08:07 +01:00 by Ilja Razinkov · 10 comments

System Information
Operating system: MacOs
Graphics card: Radeon

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-22 19:39, hash: 2746238dde, type: release

several linked copies of compaund object are bended with same lattice. When entering into edit mode (mesh) on some of objects Blender crashes with

blender(9937,0x700006a61000) malloc: *** error for object 0x7fb2bfa9b200: pointer being freed was not allocated
blender(9937,0x700006a61000) malloc: *** set a breakpoint in malloc_error_break to debug

Steps to reproduce: open attached blend and just tab-in - tab out to blue parts of "pathway". They are all linked and bended with lattice (hidden, may be enabled in outliner). After several tab-ins/outs blender crashes. In heavy scene this happens fast, in this stripped several attempts may be required

Look at video. Crash happens on very second tab-in (switch to edit mode):
Screen Recording 2022-02-23 at 20.06.44.mov

Blend with this scene:
edit_crash_v2.blend

**System Information** Operating system: MacOs Graphics card: Radeon **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-22 19:39, hash: 2746238dde66, type: release several linked copies of compaund object are bended with same lattice. When entering into edit mode (mesh) on some of objects Blender crashes with ``` blender(9937,0x700006a61000) malloc: *** error for object 0x7fb2bfa9b200: pointer being freed was not allocated blender(9937,0x700006a61000) malloc: *** set a breakpoint in malloc_error_break to debug ``` Steps to reproduce: open attached blend and just tab-in - tab out to blue parts of "pathway". They are all linked and bended with lattice (hidden, may be enabled in outliner). After several tab-ins/outs blender crashes. In heavy scene this happens fast, in this stripped several attempts may be required Look at video. Crash happens on very second tab-in (switch to edit mode): [Screen Recording 2022-02-23 at 20.06.44.mov](https://archive.blender.org/developer/F12884368/Screen_Recording_2022-02-23_at_20.06.44.mov) Blend with this scene: [edit_crash_v2.blend](https://archive.blender.org/developer/F12885289/edit_crash_v2.blend)
Author

Added subscriber: @IPv6

Added subscriber: @IPv6
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Hi, thanks for the report. All objects of the file are not local I guess.
I got this error: Unable to open zzz_CloudFiles\Yandex.Disk.localized\Kristallum\_3D\Lib_v04.blend': No such file or directory
Can you reupload the file?

Also- I didn't get crash with current state of your file but it freezes on switching to edit mode.

Hi, thanks for the report. All objects of the file are not local I guess. I got this error: `Unable to open zzz_CloudFiles\Yandex.Disk.localized\Kristallum\_3D\Lib_v04.blend': No such file or directory` Can you reupload the file? Also- I didn't get crash with current state of your file but it freezes on switching to edit mode.
Author

It`s just a material lib, crash happens without it also. I updated blender file, now it does not use library - and crash still happens after several mode changes.
Look at video and attached blend

Crash steps:
Screen Recording 2022-02-24 at 11.41.11.mov

Updated blend:
edit_crash_v2.blend

System info: system-info.txt

It`s just a material lib, crash happens without it also. I updated blender file, now it does not use library - and crash still happens after several mode changes. Look at video and attached blend Crash steps: [Screen Recording 2022-02-24 at 11.41.11.mov](https://archive.blender.org/developer/F12885282/Screen_Recording_2022-02-24_at_11.41.11.mov) Updated blend: [edit_crash_v2.blend](https://archive.blender.org/developer/F12885289/edit_crash_v2.blend) System info: [system-info.txt](https://archive.blender.org/developer/F12885290/system-info.txt)
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Thank you. Still cannot get the crash. Instead it becomes unresponsive.
Also- switching between modes works fine for me on debug build (neither freezes).
From further testing on release builds, I found issue came somewhere between abf30007ab - c4bedeb018
I suspect 0f89bcdbeb
@Sergey , can you check?

Thank you. Still cannot get the crash. Instead it becomes unresponsive. Also- switching between modes works fine for me on debug build (neither freezes). From further testing on release builds, I found issue came somewhere between abf30007abda - c4bedeb0186b I suspect 0f89bcdbeb @Sergey , can you check?

This issue was referenced by 629f22f161

This issue was referenced by 629f22f161abfbe492d71e08cc89651da683aded
Sergey Sharybin self-assigned this 2022-02-24 14:18:50 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95997
No description provided.